Fixed Font sizes on Mobile

--- a/css/master.css
+++ b/css/master.css
@@ -9,7 +9,6 @@ html{
   min-height: 520px;
   display: flex;
   align-items: center;
-  transform: translateY(-40px);
   /*border: solid 2px grey;*/
 }
 
@@ -186,7 +185,7 @@ html{
     transform: translate(-150px, 25px);
   }
   #Quote{
-    font-size: 25px;
+    font-size: 20px;
     transform: translateY(-90px);
   }
 }
@@ -201,7 +200,7 @@ html{
     transform: translate(-120px, 25px);
   }
   #Quote{
-    font-size: 20px;
+    font-size: 18px;
     transform: translateY(-120px);
   }
 }
@@ -237,5 +236,5 @@ footer span{
   footer h6{ font-size: 14px; }
 }
 @media (max-width: 453px) {
-  footer h6{ font-size: 10px; }
+  footer h6{ font-size: 14px; }
 }
